refactor : 쿼리 최적화 & oauthId -> userId 변경